--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Django==2.1.3
-djangorestframework==3.9.0
-djangorestframework-simplejwt==3.3
+asgiref==3.3.4
+Django==3.2
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.6.0
+PyJWT==2.0.1
+pytz==2021.1
+sqlparse==0.4.1
